@@ -1,14 +1,16 @@
 package com.odk.basedomain.domain.impl;
 
+import com.baomidou.mybatisplus.core.metadata.IPage;
+import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.odk.base.context.TenantIdContext;
 import com.odk.base.enums.user.UserStatusEnum;
 import com.odk.base.exception.AssertUtil;
 import com.odk.base.exception.BizErrorCode;
-import com.odk.base.util.PageUtil;
 import com.odk.base.vo.response.PageResponse;
 import com.odk.basedomain.domain.*;
 import com.odk.basedomain.domain.criteria.UserListQueryCriteria;
 import com.odk.basedomain.domain.criteria.UserQueryCriteria;
+import com.odk.basedomain.mapper.UserComplexMapper;
 import com.odk.basedomain.model.user.UserAccessTokenDO;
 import com.odk.basedomain.model.user.UserBaseDO;
 import com.odk.basedomain.repository.user.UserAccessTokenRepository;
@@ -19,7 +21,6 @@ import com.odk.baseutil.request.UserListQueryRequest;
 import com.odk.baseutil.userinfo.SessionContext;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
@@ -49,6 +50,8 @@ public class UserQueryDomainImpl implements UserQueryDomain {
     private UserBaseDomain userBaseDomain;
 
     private AccessTokenDomain accessTokenDomain;
+    
+    private UserComplexMapper userComplexMapper;
 
     @Override
     public UserEntity queryUser(UserQueryCriteria criteria) {
@@ -97,18 +100,16 @@ public class UserQueryDomainImpl implements UserQueryDomain {
 
     @Override
     public PageResponse<UserEntity> queryUserPageList(UserListQueryRequest pageParamRequest) {
-//        Page<String> strings = customerRepository.queryUserPageList(pageParamRequest);
-//        if (strings.isEmpty()) {
-//            return PageResponse.ofEmpty();
-//        }
-//        Page<UserEntity> byTenantId = strings.map(this::getUserInfo);
-//        List<UserEntity> userEntities = new ArrayList<>(byTenantId.getContent());
-//        return PageResponse.of(userEntities, (int) byTenantId.getTotalElements());
-
-
-        Page<UserBaseDO> pageList = userBaseRepository.findPageList(pageParamRequest, TenantIdContext.getTenantId(), PageUtil.convertToPageRequest(pageParamRequest));
-        List<UserEntity> collect = pageList.stream().map(userBaseDO -> getUserInfo(userBaseDO.getId())).toList();
-        return PageResponse.of(collect, (int) pageList.getTotalElements());
+        // 使用MyBatis Plus进行复杂查询
+        IPage<UserBaseDO> page = new Page<>(pageParamRequest.getPage(), pageParamRequest.getSize());
+        IPage<UserBaseDO> resultPage = userComplexMapper.selectUserPage(page, pageParamRequest, TenantIdContext.getTenantId());
+        
+        // 转换为用户实体列表
+        List<UserEntity> userEntities = resultPage.getRecords().stream()
+                .map(userBaseDO -> getUserInfo(userBaseDO.getId()))
+                .collect(Collectors.toList());
+        
+        return PageResponse.of(userEntities, (int) resultPage.getTotal());
     }
 
 
@@ -138,6 +139,11 @@ public class UserQueryDomainImpl implements UserQueryDomain {
 
     /**
      * 通用获取用户信息方法
+     * 直接使用各个维度的缓存服务获取数据并组装，不引入额外的整体缓存
+     * 这样设计的优势：
+     * 1. 更新时只需要清除特定维度的缓存，不影响其他维度
+     * 2. 查询时可以复用各个维度已有的缓存
+     * 3. 不同维度可以有不同的缓存策略和过期时间
      *
      * @param userId
      * @return
